--- a/modules/features/feature_home/src/main/res/values/strings.xml
+++ b/modules/features/feature_home/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="home_title">Seats</string>
-    <string name="home_subtitle">Look for your favorite seat</string>
+    <string name="home_subtitle">Where are you working today?</string>
     <string name="home_meeting_room_title">Meeting room</string>
     <string name="home_private_booth_title">Private\nbooth</string>
     <string name="home_break_out_title">Break-out</string>
