Do fixes on booking screen, add animation for booking holder

--- a/modules/features/feature_booking/src/main/res/values/strings.xml
+++ b/modules/features/feature_booking/src/main/res/values/strings.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="booking_title">Booking</string>
-    <string name="booking_subtitle">Book your best seat today</string>
+    <string name="booking_subtitle">Here\'s the booking history</string>
     <string name="booking_empty_list_signature">You don\'t have any\nbookings yet</string>
     <string name="booking_book_here">Book Here</string>
+    <string name="booking_cancellation_button_title">Cancel Booking</string>
+
+    <plurals name="people_amount">
+        <item quantity="one">%d person</item>
+        <item quantity="other">%d people</item>
+    </plurals>
 </resources>
