Update colors on home screen

--- a/modules/features/feature_home/src/main/res/values/strings.xml
+++ b/modules/features/feature_home/src/main/res/values/strings.xml
@@ -5,5 +5,5 @@
     <string name="home_meeting_room_title">Meeting room</string>
     <string name="home_private_booth_title">Private\nbooth</string>
     <string name="home_break_out_title">Break-out</string>
-    <string name="home_lounge_title">Lounge</string>
+    <string name="home_open_space_title">Open space</string>
 </resources>
